Changes in Version 2.2-0

  o Added first development version of exams2blackboard(). This is still
    experimental and likely to change in future versions. It essentially
    behaves as exams2qti12() but with some additional processing for Blackboard.

  o Improvements and bug fixes in exams2tcexam(). Various HTML tags are now
    supported in the development version by adding a new [html] tag in TCExam.
    This has been integrated into UIBK's version of TCExam but is not in the
    official release yet.

  o Fixed a bug in exams2html() with option solution = FALSE or
    question = FALSE. Now these correctly suppress the corresponding element
    of the exercise. In previous versions only the header had been set to NA
    erroneously.

  o Added a new convenience function include_supplement() which facilitates
    including static supplement files (e.g., graphics or datasets). This
    essentially just calls file.copy() but facilitates finding supplement
    files that are available along with the .Rnw/.Rmd exercise files.

  o In exams2nops() the argument 'blank' can now be a vector of length 2
    with the number of blank pages before and after the extra "pages".

  o Added arguments samepage=FALSE and twocolumn=FALSE in exams2nops().
    If set to TRUE, samepage adds a {samepage} environment around the
    question and solution lists in order to prevent page breaks within
    these lists. And the twocolumn option, if set to TRUE, is added in
    the \documentclass so that the exam is displayed in two-column
    format.

  o New language support in exams2nops: Hungarian (hu, contributed by
    Gergely Daroczi and Denes Toth), Finnish (fi, contributed by Klaus
    Nordhausen). Improvements in: Portugese (pt, contributed by Mauricio
    Calvao).

  o xweave() gained an extra argument svg=FALSE to optionally produce scalable
    vector graphics (SVG) instead of PNG for later rendering into HTML. All