@@ -4,6 +4,11 @@ Changes in Version 2.2-0
     experimental and likely to change in future versions. It essentially
     behaves as exams2qti12() but with some additional processing for Blackboard.
 
+  o exams2nops() now supports registration IDs with more than 7 digits.
+    Up to now 7 digits were hard-coded but now values of 8, 9, or 10 are
+    also possible by setting the argument "reglength" in exams2nops()
+    accordingly.
+
   o Improvements and bug fixes in exams2tcexam(). Various HTML tags are now
     supported in the development version by adding a new [html] tag in TCExam.
     This has been integrated into UIBK's version of TCExam but is not in the
